- Fixed some minor layout issues - Overriden bootstrap primary color variable

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./custom_variables.scss";
+
+$theme-colors: (
+  "primary": $green
+);
+
+@import "../node_modules/bootstrap/scss/bootstrap";
